// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Card component should accept additional props 1`] = `
<View
  accessible={false}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "#dddddd",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
/>
`;

exports[`the Card component should accept and render passed in styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "height": 400,
      "shadowColor": "#dddddd",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
      "width": "92%",
    }
  }
/>
`;

exports[`the Card component should render 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderRadius": 6,
      "shadowColor": "#dddddd",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 1,
      "shadowRadius": 3,
    }
  }
/>
`;
